fixed the issue of images not showing

--- a/shop/static/style.css
+++ b/shop/static/style.css
@@ -97,12 +97,12 @@ nav .content span{
     text-align: center;
     
 }
-/*
+
 .testimonials .customer img{
-    height: 20px;
-    width: 20px;
-    text-align: center;
-}*/
+    height: 60px;
+    width: 60px;
+    border-radius: 60px;
+}
 
 .testimonials .customer h4{
     text-align: center;
